  util/stringasm.S: Tidied globals and externs. (VRI)
- Makefile: Fixed tabs. (VRI)
- bios/floppy.c: Fix regression that prevented floppy access on real hardware
  (introduced by floppy VBL changes of 2014-12-17). (RFB)

2015-02-26
- doc/*: Updated. (VRI)
- bios/ide.c: Remove space padding in IDE disk names. (VRI)

2015-02-27
- bios/floppy.c: Fix regression that caused floppy writes to trash floppy
  (introduced by timeout change of 2014-12-17). (RFB)

2015-03-01
- Makefile release.mk doc/announce.txt doc/readme-m548x-bas.txt: Renamed
  m548xbas to m548x-bas. (VRI)
- Makefile release.mk doc/announce.txt doc/readme-m548x-dbug.txt: Renamed
  m548x to m548x-dbug. (VRI)
- readme-m548x-dbug.txt readme-m548x-bas.txt: Updated. (VRI)

2015-03-03
- desk/deskdir.c: Fix regression that always disallowed a file copy/move
  when there was a filename conflict and the user preferences were set
  to prompt on overwrites. (RFB)

2015-03-04
- desk/deskdir.c: Fix regression: attempting to delete a read-only file
  made the containing folder non-deletable until after a reboot. (RFB)

* Release: 0.9.4

2015-03-08
- desk/deskdir.c: Code cleanup: eliminate some static variables. (RFB)
- bios/kprint.c: Added CRLF translation in kprintf_outc_sccB(). (RFB)

2015-03-09
- po/gr.po: Updated Greek translation. Contributed by Christos Tziotzis. (VRI)
- country.mk: Set default Greek keyboard layout to US. Contributed by Christos
  Tziotzis. (VRI)

2015-03-11
- cli/cmd.h cli/cmdmain.c cli/cmdparse.c: Replace '"' with #define so that
  modules can be processed by the bug tool. (RFB)
- po/POTFILES.in: Add appropriate files in cli/ to translation list. (RFB)
- desk/desktop.def desk/desktop.rsc: Increase width of 'New folder' text
  object to allow for Greek/Spanish translations. (RFB)
- aes/gemlib.h aes/gemrslib.c: Eliminate some #defines to simplify code. (RFB)
- po/fr.po: Added EmuCON2 translation. (VRI)
- cli/.cvsignore: Added *.tr.c. (VRI)